tests/paczka1/small_fuzzy/53676779.err
Error in line 1: EwRaE4K18 S957 35,5
Error in line 2: EwRaE4K18 S830 86,1
Error in line 3: EwRaE4K18 S560 13,8
Error in line 5: EwRaE4K18 A442 49,8
Error in line 15: UPOx S830 164,34
